Removes exceptions in method signatures which are never thrown and removes the corresponding catch clauses as well.